fix alignment of images

--- a/main-styles.css
+++ b/main-styles.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: space-between;    
+    justify-content: space-between;
 }
 
 h1 {
@@ -17,7 +17,7 @@ h1 {
     padding: 1.5rem;
     background-color: rgb(36, 37, 37);
     color: aliceblue;
-    
+
 }
 
 .content {
@@ -31,6 +31,8 @@ h1 {
 .img {
     display: flex;
     flex-direction: column;
+    height: 70%;
+    align-self: center;
 }
 
 img {
